wedding-website/styles/global.css
/* ... */
.after-party-invitation:hover {
    cursor: pointer;
}

.biggerList {
    font-size: 1.4rem;
    margin-left: 2em;
}

.linksList {
    margin-bottom: 2em;
}

.parking {
    width: 90%;
    max-width: 800px;
    margin: 0 auto;
}

.byCar {
    margin-bottom: 1em;
}

h3 {
    font-size: 1.4rem;
}

h4 {
    font-size: 1.2rem;
}

.hidden {
    display: none;
}

.details {
    width: 100%;
    max-width: 800px;
    margin: 1em auto 0 auto;
    text-align: center;
}

details > .smallerParagraph {
    font-size: 1.2rem;
}

.gallery {
    display: grid;
    grid-template-columns: auto auto auto auto;
    grid-gap: 20px;
    margin: 40px 20px;
}

@media (max-width: 800px) {
    .gallery {
        grid-template-columns: auto auto;
    }
    .galleryImage {
        height: 300px;
    }
}

@media (max-width: 600px) {
    .gallery {
        grid-template-columns: auto;
    }
    .galleryImage {
        height: 200px;
    }
}

.galleryImage {
    position: relative;
    width: 100%;
    height: 400px;
}

.galleryActualImg:hover {
    cursor: pointer;
}

.galleryActualImg {
    object-fit: contain;
}

.galleryImgContainer {
    width: 80vw;
    max-width: 700px;
    height: 80vh;
    position: relative;
}

.closeupCloseButtonContainer {
    width: 80vw;
    max-width: 700px;
    display: flex;
    justify-content: flex-end;
    padding-bottom: 5px;
}

.closeupImage {
    object-fit: contain;
}

.galleryButton {
    background: none;
    color: white;
    font-size: 2rem;
    border: none;
}

.galleryButton:hover {
    cursor: pointer;
}

.closeupView {
    display: none;
}

.closeupCarousel {
    display: flex;
    justify-content: center;
    align-items: center;
}

.leftArrow {
    margin-right: 5px;
}

.rightArrow {
    margin-left: 5px;
}

.caption {
    position: absolute;
    right: 0;
    bottom: 0;
    margin: 0;
    padding: 5px;
    border-radius: 5px 0 0 5px;
    background: white;
    font-size: 1.2rem;
    display: none;
}

.imgMetadata {
    display: flex;
    width: 80vw;
    max-width: 700px;
    margin: 0 auto;
}

.imgMetadata > div {
    width: 50%;
}

.imgMetadata > div > p {
    color: white;
}

.imgCount {
    text-align: right;
}

@media (max-width: 600px) {
    .imgMetadata {
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
    .imgCount {
        text-align: left;
    }
}

